# tplat

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md
docs/: Gemfile  _config.yml  about.markdown  index.md
docs/_posts/: 2024-02-11-welcome-to-jekyll.markdown
projects/anu/engn4213/FPGA Assignment/: ReportTemplate_FPGA_ProjectReport.docx  basys3.docx
projects/anu/engn4537/Matlab Project/: Q1.m  Q3.m  (+3 more)
projects/budget/: BUILD.bazel
projects/budget/budget/: __init__.py  main.py
projects/budget/docs/: docs.md
projects/budget/test/: BUILD.bazel  test.py
projects/fpga/docs/: clock-division.md  full-adder.md  hazards.md  mux.md  overflow-counter.md  seven-segment-display.md  verilog.md
projects/fpga/full-adder/: TB_Test_Add_1.v
projects/leetcode/: 169-majority-element.py  26-remove-duplicates-sorted-array.py  27-remove-element.py  80-remove-duplicates-sorted-array-ii.py  88-merge-sorted-array.py
projects/ocr/ocr/: __init__.py  prototype.ipynb
projects/poker/: BUILD.bazel
projects/poker/docs/: docs.md
projects/poker/poker/: __init__.py  main.py
projects/poker/test/: BUILD.bazel  test.py
projects/pyqt/: gui.py  main.py
projects/qr/: BUILD.bazel  main.py
projects/qr/docs/: docs.md
projects/qr/docs/data/: BUILD.bazel
projects/smoker/arduino_fan_control/: arduino_fan_control.ino
projects/translate/: BUILD.bazel  main.py
projects/translate/test/: BUILD.bazel  test.py
projects/translate/translate/: __init__.py  main.py
toolchains/python/: BUILD.bazel  requirements3_bazel.in  requirements3_bazel_lock.txt  requirements3_windows.txt
(+74 files in other folders)
