load("@rules_python//python:pip.bzl", "compile_pip_requirements")

# This rule adds a convenient way to update the requirements file.
compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements3_bazel.in",
    requirements_windows = "requirements3_windows.txt",
    requirements_txt = "requirements3_bazel_lock.txt",
)